# url-shortener-with-rocket

./: Cargo.toml  LICENSE  README.md
migrations/: schema.sql
src/: main.rs
src/modules/: mod.rs  redirect.rs  shorten.rs  structs.rs
