[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
shuttle-rocket = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
serde = "1.0.210"
tokio = "1.40.0"
url = "2.5.2"
nanoid = "0.4.0"